--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
         {{#each list}}
             {{#unless smoked}}
                 <li>
-                    <p>{{location}}</p>
+                    <p class = "smokeText">{{location}}</p>
                     <button class="smokeButton" id="{{id}}">
                         Smoke!
                     </button>
