--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,22 +8,27 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/bbq.js"></script>
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="jumbotron">
-                    <h1>BBQ 4 U</h1>
-                    <p>Build up a list of the BBQ you would like to try then 'Smoke' it to keep a record of where you've eaten.</p>
-                    <input type="text" id="bbq" placeholder="List a new location">
-                    <button id="submit">Submit</button>
-                    {{{body}}}
+    <div class="bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="jumbotron">
+                        <h1>BBQ 4 U</h1>
+                        <p>Build up a list of the BBQ you would like to try then 'Smoke' it to keep a record of where you've eaten.</p>
+                        <p>Toss it if you no longer want it in your records.</p>
+                        <input type="text" id="bbq" placeholder="List a new location">
+                        <button id="submit">Submit</button>
+                        {{{body}}}
+                    </div>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
+
     
 
     <script>
