--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,20 +2,20 @@
     <div class="col-6">
         <h3>Heatin' up</h3>
         {{#each list}}
-            {{#unless smoked}}
+            {{#if smoked = 0}}
                 <li>
                     <p class = "smokeText">{{location}}</p>
                     <button class="smokeButton" id="{{id}}">
                         Smoke!
                     </button>
                 </li>
-            {{/unless}}
+            {{/if}}
         {{/each}}
     </div>
     <div class="col-6">
         <h3>Smoked</h3>
             {{#each list}}
-                {{#if smoked}}
+                {{#if smoked = 1}}
                     <li>
                         <p>{{location}}</p>
                         <button class="deleteButton" id="{{id}}">
