cleaned some of the code and made the site look better

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,6 +10,14 @@ body{
 
 }
 
-.smokeText, .smokeButton {
+.deleteButton, .deleteText, .smokeText, .smokeButton {
     display: inline;
+}
+
+.smokeButton, .deleteButton {
+    float: right;
+}
+
+.heat {
+    color: darkred;
 }
