--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    {{!-- <script src="/assets/js/bbq.js"></script> --}}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Document</title>
 </head>
@@ -20,8 +20,10 @@
                         <h1>BBQ 4 U</h1>
                         <p>Build up a list of the BBQ you would like to try then 'Smoke' it to keep a record of where you've eaten.</p>
                         <p>Toss it if you no longer want it in your records.</p>
-                        <input type="text" id="bbq" placeholder="List a new location">
-                        <button id="submit">Submit</button>
+                        <div class="input-group">
+                            <input type="text" id="bbq" placeholder="List a new location">
+                        </div>
+                        <button type="button" class="btn btn-dark" id="submit">Submit</button>
                         {{{body}}}
                     </div>
                 </div>
